[package]
name = "refinery-cloud"
version = "0.1.0"
edition = "2021"

[lib]
name = "refinery_core"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fasttext = "0.7"
encoding_rs = "0.8"
unicode-segmentation = "1.10"
simd-json = "0.13"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
