[package]
name = "refinery_cloud"
version = "0.1.0"
edition = "2021"

[lib]
name = "refinery_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
fasttext = "0.7"
encoding_rs = "0.8"
unicode-segmentation = "1.10"
once_cell = "1.19"
